--- a/notebooks/terramind_any_to_any_generation.ipynb
+++ b/notebooks/terramind_any_to_any_generation.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -22,13 +24,14 @@
     "    device = 'mps'\n",
     "else:\n",
     "    device = 'cpu'"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "43b2c3eb41e450d8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load input data\n",
     "examples = [\n",
@@ -50,14 +53,14 @@
     "    k: torch.Tensor(v.values, device='cpu').unsqueeze(0)\n",
     "    for k, v in data.items()\n",
     "}"
-   ],
-   "id": "43b2c3eb41e450d8",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f399d4fb83a5adfa",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Run any-to-any generation (this can take a while without a GPU, consider reducing timesteps for faster inference)\n",
     "outputs = {}\n",
@@ -80,14 +83,14 @@
     "    with torch.no_grad():\n",
     "      generated = model(input, verbose=True, timesteps=10)\n",
     "    outputs[m] = generated"
-   ],
-   "id": "f399d4fb83a5adfa",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9ced943a8b005719",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Plot any-to-any generations\n",
     "n_mod = len(modalities)\n",
@@ -108,23 +111,20 @@
     "        \n",
     "plt.savefig(f'any_to_any_{os.path.basename(file)}.pdf')\n",
     "plt.show()"
-   ],
-   "id": "9ced943a8b005719",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "execution_count": null,
    "id": "4e111c2205329efe",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "terramind2",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
